--- a/css/style.css
+++ b/css/style.css
@@ -32,3 +32,33 @@ a{
     background:url("../image/icons.jpg");
     vertical-align: middle;
 }
+.logo{
+    width: 970px;
+    height: 98px;
+    margin: 0 auto;
+}
+.logo_l{
+    width: 200px;
+    height: 55px;
+    margin: 24px 0 19px 9px;
+    background: url("../image/icons.jpg") -20px 0;
+    text-indent: -1000em;
+
+}
+.logo_r{
+    width: 530px;
+    height: 42px;
+    background: palegoldenrod;
+}
+.logo_r_search{
+    width: 418px;
+    height: 28px;
+    border: none;
+    border: solid 1px #c9c9c9;
+}
+.logo_r_btn{
+    width: 99px;
+    height: 30px;
+    padding-top: 0!important;
+
+}
