--- a/css/style.css
+++ b/css/style.css
@@ -44,21 +44,51 @@ a{
     background: url("../image/icons.jpg") -20px 0;
     text-indent: -1000em;
 
+
 }
 .logo_r{
     width: 530px;
     height: 42px;
-    background: palegoldenrod;
+    border: 1px solid #c9c9c9;
+    margin-top: 29px;
+}
+.logo_r_content {
+ margin: 5px 5px 5px 4px;
 }
 .logo_r_search{
     width: 418px;
     height: 28px;
     border: none;
     border: solid 1px #c9c9c9;
+    color: #999999;
 }
 .logo_r_btn{
     width: 99px;
-    height: 30px;
-    padding-top: 0!important;
+    height: 29px;
+    background-color:#2F70D0;
+    border: none;
+}
+.nav{
+    width: 970px;
+    height: 25px;
+    margin: 0 auto;
+    border-bottom: 2px solid #0266a3;
+}
+.nav li {
+    padding: 0px 15px 0px 15px;
+    line-height: 25px;
+    float: left;
+    font-size: 14px;
+    font-weight: bold;
 
+}
+.nav li a {
+    color:#0266a3;
+}
+
+.nav li:hover{
+    background-color: #0266a3;
+}
+.nav li a:hover{
+    color: white;
 }
